# Firmware

./: .gitignore
Albertaloop Motor Controller/src/: main.cpp
STM32MP1/state-machine/: .gitignore  Dockerfile  Makefile  README.md  activate-env.sh  check-usb-cmds  copy-to-host.sh  copy-to-target.sh  proj.sh  stm32mp157f-dk2 (copy).dts  stm32mp157f-dk2.dtb  uboot-install-cmds
STM32MP1/state-machine/DeviceTree/linux/: stm32mp157f-dk2.dts
STM32MP1/state-machine/DeviceTree/test-project2/optee-os/: stm32mp157f-test-project2-mx.dts
STM32MP1/state-machine/DeviceTree/test-project2/tf-a/: stm32mp15-mx.dtsi  stm32mp157f-test-project2-mx.dts
STM32MP1/state-machine/DeviceTree/test-project2/u-boot/: stm32mp157f-test-project2-mx.dts
STM32MP1/state-machine/can_service/: podcan.service  podcan.sh
STM32MP1/state-machine/src/: Makefile  cantest  cantest.c  cantest2  cantest2.c  cmdtest  cmdtest.c  loopback.c  main  main.c  priority_queue.c  priority_queue.h  root@192.168.1.10  tcptest  tcptest-client.c  tcptest.c  temp.c
STM32MP1/state-machine/tests/: Makefile  pqtest  priority_queue_test.c
can-tests/cantest-1-teensy3.6/lib/FlexCAN_Library-master/: FlexCAN.cpp
can-tests/cantest-1-teensy3.6/src/: main.cpp
can-tests/cantest-2-teensy3.6/lib/FlexCAN_Library-master/: FlexCAN.cpp
can-tests/cantest-2-teensy3.6/src/: main.cpp
initailstatemachine/: main.c
issue1/: a.out  server  tcp_client.c  tcp_sever.c
statemachine/: CMakeLists.txt  README  main.c  proj.sh  statemachine.c  statemachine.h  udp.c  udp.h  udp_functionality.c  udpf
